# testRepo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  testchild.py
.github/workflows/: deploy.yml  dev-deploy-cicd.yml
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/tests/: test_main.py
